# strawhub

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  TODO.md  eslint.config.js  index.html  middleware.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  publish-cli.yml
cli/: README.md  pyproject.toml
cli/src/strawhub/: __init__.py  cli.py  client.py  config.py  display.py  errors.py  frontmatter.py  lockfile.py  logging.py  paths.py  project_file.py  resolver.py  tools.py  version_spec.py
cli/src/strawhub/commands/: ban_user.py  delete.py  export.py  info.py  init.py  install.py  install_tools.py  list.py  login.py  logout.py  publish.py  resolve_cmd.py  search.py  set_role.py  star.py  uninstall.py  update.py  validate.py  whoami.py
cli/tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_export.py  test_frontmatter.py  test_init.py  test_install.py  test_lockfile.py  test_logging.py  test_logout.py  test_paths.py  test_project_file.py  test_publish.py  test_resolver.py  test_root_option.py  test_tools.py  test_uninstall.py  test_update.py  test_validate.py  test_version_spec.py
convex/: agents.ts  apiTokens.ts  auth.ts  comments.ts  counters.ts  crons.ts  deleteAllFiles.ts  downloads.ts  files.ts  http.ts  integrations.ts  memories.ts  reports.ts  roles.ts  schema.ts  search.test.ts  search.ts  sitemap.ts  skills.ts  stars.ts  statEvents.ts  users.ts  virusTotalScan.ts  virusTotalScanActions.ts
convex/_generated/: api.d.ts
convex/httpApiV1/: adminV1.ts  agentsV1.ts  downloadsV1.ts  integrationsV1.ts  memoriesV1.ts  rolesV1.ts  searchV1.ts  shared.test.ts  shared.ts  sitemapV1.ts  skillsV1.ts  starsV1.ts  whoamiV1.ts
convex/lib/: access.ts  binaryDetection.test.ts  binaryDetection.ts  embeddings.test.ts  embeddings.ts  frontmatter.test.ts  zip.ts  (+11 more)
docs/: README.md  architecture.md  auth.md  cli.md  content-format.md  deploy.md  docs.json  http-api.md  index.mdx  quickstart.md  quickstart.mdx  security.md  spec.md  troubleshooting.md
e2e/: detail.pw.test.ts  listing.pw.test.ts  search.pw.test.ts  smoke.pw.test.ts
public/: robots.txt
src/: main.tsx  routeTree.gen.ts  styles.css
(+55 files in other folders)
