[project]
name = "strawhub"
dynamic = ["version"]
description = "CLI for the StrawHub agent skill and role registry"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
strawhub = "strawhub.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/strawhub/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/strawhub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
