[project]
name = "strawhub"
dynamic = ["version"]
description = "CLI for the StrawHub agent skill and role registry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "StrawPot" }]
keywords = ["strawhub", "strawpot", "agent", "skills", "roles", "registry", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "platformdirs>=3.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://strawhub.dev"
Repository = "https://github.com/strawpot/strawhub"
Documentation = "https://github.com/strawpot/strawhub/blob/main/docs/http-api.md"
Discord = "https://discord.gg/buEbvEMC"

[project.scripts]
strawhub = "strawhub.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/strawhub/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/strawhub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
